--- a/FIDO/20210825-facetが複数の場合の対応.md
+++ b/FIDO/20210825-facetが複数の場合の対応.md
@@ -119,7 +119,22 @@ nnlConfig.namevalueservice_url = nnlhost + "/nvpservice";
       - audience
       - subject
       - issuer
-4. nnlgatewayのウェブサーバで X-Frame-Options を指定している場合には外す
+  
+4. gwtutorialのコンフィグの修正
+   1. gwtutorialのログイン機能を使うのであれば(デモでgwtutorialを利用するなら)
+    　ログイン機能はダミーなので本番向けでないため、基本的に従来のログインの延長でjwtを発行するかたちで実装する
+    　defaultテナントのjwtの定義を修正する。
+    　
+    　＊本来はgwtutorial/login/tenantidでテナント毎のログイン設定でうまくいくようだったが、なぜか私が設定すると
+    　　うまくいっていないのでdefaultで記載。
+
+    　gateway側と同じ設定とする。
+
+      - audience
+      - subject
+      - issuer
+            　
+5. nnlgatewayのウェブサーバで X-Frame-Options を指定している場合には外す
    1. SAMEORIGIN、DENYしか指定できないが、RPとnnlgatewayのFQDNが異なる場合に有効なオプションはないので外すしかない。
    2. その代わりに Content-Security-Policyヘッダ側の frame-ancestors オプションで指定することで上記の制限の代わりにすることは可能です。
     本対応は富士通のインフラ監査対応には必要と思われます。
